<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/btnChecarLlegada"
        android:layout_width="199dp"
        android:layout_height="73dp"
        android:layout_marginTop="79dp"
        android:fontFamily="monospace"
        android:lineSpacingExtra="14sp"
        android:onClick="CheckLlegada"
        android:text="@string/checar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brnHistorial"
        android:layout_width="186dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:onClick="historial"
        android:text="@string/historial"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/btnError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChecarLlegada"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/btnError"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="307dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:background="#EBFF0000"
        android:contentDescription="@string/error"
        android:fontFamily="serif-monospace"
        android:lineSpacingExtra="8sp"
        android:onClick="repError"
        android:text="@string/error"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>